# dotmatrix-fileprinter

./: Justfile  README.adoc  RSR_COMPLIANCE.adoc  STATE.scm  deno.json  give me all the files please in a response, and just separate the files out in codeblocks with file names nad locations labelled  index.html  rescript.json  vite.config.js
,machine_readable/: STATE.scm
config/: meta.ncl
kernel/: striker.fth
lib/ocaml/: App.ast  App.cmi  App.cmj  App.cmt  Bindings.ast  Bindings.cmi  Bindings.cmj  Bindings.cmt  Bindings.res  Proven_SafeHex.cmi  Proven_SafeHex.cmj  Proven_SafeHex.cmt  Proven_SafeMath.cmi  Proven_SafeMath.cmj  Proven_SafeMath.cmt  Proven_SafePath.cmi  Proven_SafePath.cmj  Proven_SafePath.cmt  Proven_SafeString.cmi  Proven_SafeString.cmj  Proven_SafeString.cmt  Types.ast  Types.cmi  Types.cmj  Types.cmt  Types.res
src/: App.res  App.res.js  Bindings.res  Bindings.res.js  Types.res.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/proven/: Proven_SafeHex.res.js  Proven_SafeMath.res.js  Proven_SafePath.res.js  Proven_SafeString.res.js
src/styles/: main.css
tests/: bindings_test.ts  proven_safe_hex_test.ts  proven_safe_math_test.ts  proven_safe_path_test.ts  proven_safe_string_test.ts
