# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "dotmatrix-fileprinter"
version = "1.0.0"
description = "Neurosymbolic filesystem manipulation via Forth kernel"
authors = ["Jonathan D.A. Jewell"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/dotmatrix-fileprinter"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
